<resources>
    <string name="app_name">Hos Veli</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gcm_defaultSenderId">1090039120603</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialog_congrats_title">Congratulations</string>
    <string name="reg_hint_name"> Name</string>
    <string name="reg_hint_fname">First Name</string>
    <string name="reg_hint_lname">Last Name</string>
    <string name="reg_hint_email">Email</string>
    <string name="reg_hint_contact">Contact Number</string>
    <string name="reg_hint_nationality">Nationality</string>
    <string name="reg_hint_password">Password</string>
    <string name="reg_hint_confirm_password">Confirm Password</string>
    <string name="reg_button_submit">SUBMIT</string>
    <string name="reg_error_name">Please provide your full name.</string>
    <string name="reg_error_fname">Please provide your first name.</string>
    <string name="reg_error_lname">Please provide your last name.</string>
    <string name="reg_error_email">Please provide a valid email.</string>
    <string name="reg_error_contact_number">Please provide a contact number.</string>
    <string name="reg_error_not_malay_contact_number">Please provide a valid contact number.</string>
    <string name="reg_error_nationality">Please provide your nationality.</string>
    <string name="reg_error_password">You must provide applicantPassword to sign up.</string>
    <string name="reg_error_confirm_password">Please provide confirm applicantPassword.</string>
    <string name="reg_error_password_not_match">Passwords does not matched.</string>
    <string name="reg_error_server_not_reached">Server is not reachable. Please try back shortly</string>
    <string name="reg_error_unknown_server">Unable to register due to unknown server error.</string>
    <string name="login_error_unknown_server">Unable to login due to unknown server error.</string>
    <string name="reg_error_duplicate">Your are already a registered user. Please login</string>
    <string name="reg_checking_duplicate">Checking for duplication...</string>
    <string name="reg_registering">Submitting Registration....Please login</string>
    <string name="reg_registered_message">Thank you for registering with Hos Veli. You can proceed to app now.</string>
    <string name="login_not_exist">No account exist with this username. Please SIGN UP first.</string>
    <string name="login_not_exist_wrong_pass">Invalid applicantPassword. Please try again.</string>
    <string name="login_server_error">Unable to connect to server.</string>
    <string name="login_cred_error">Unable to login. Please check your login credentials.</string>
    <string name="login_authenticating">Authenticating....</string>
    <string name="login_error_username">Please provide your email.</string>
    <string name="title_activity_tabbar">TabbarActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="aboutus_tab_aboutus">About Us</string>
    <string name="aboutus_tab_contactus">Contact Us</string>
    <string name="aboutus_tab_branches">Menu</string>
    <string name="aboutus_tab_membership">Location</string>
    <string name="aboutus_no_branches">This organization has no branches.</string>
    <string name="aboutus_loading_branches">Loading branches…</string>
    <string name="aboutus_dialer_dialog_title">Choose Number to Call</string>
    <string name="aboutus_error_branches">Unable to fetch branches info from server.</string>
    <string name="aboutus_header_text_bhasa">Hos Veli a/s</string>
    <string name="aboutus_header_text_english">Vi har alle rettigheter.</string>
    <string name="profile_tab_qr">QR Code</string>
    <string name="profile_tab_my_profile">My Profile</string>
    <string name="profile_tab_my_events">My Events</string>
    <string name="profile_tab_fav_events">Favourites</string>
    <string name="sp_tab_about">About Speaker</string>
    <string name="sp_tab_topics">Topics</string>
    <string name="sp_topics_not_available">This speaker has no topics.</string>
    <string name="server_error">Unable to connect to server.</string>
    <string name="sp_tab_uploads">Uploads</string>
    <string name="sp_upload_not_available">No documents available at the moment.</string>
    <string name="sp_not_available">This event has no speakers.</string>
    <string name="event_tab_upcoming">Upcoming</string>
    <string name="event_upcoming_not_availble">No Upcoming Events Found.</string>
    <string name="event_tab_archive">Archive</string>
    <string name="event_archive_not_availble">No Archive Events Found.</string>
    <string name="event_tab_feedback">Feedback</string>
    <string name="event_feedback_not_availble">No Survey Found.</string>
    <string name="event_feedback_item_message">Please take a moment to give your feedback.</string>
    <string name="event_not_book">You haven"'"t registered for any event.</string>
    <string name="event_no_sponsor">This event has no sponsors.</string>
    <string name="event_no_exhibitor">This event has no exhibitors.</string>
    <string name="event_loading_exhibitor">Loading exhibitors...</string>
    <string name="event_no_floorplan">Floor plan is not available for this event.</string>
    <string name="event_no_agenda">This event has no agenda.</string>
    <string name="event_not_fav">You don"'"t have any favourites.</string>
    <string name="event_exhibitor_not_detail">This exhibitor has no details.</string>
    <string name="event_detail_tab_info">Info</string>
    <string name="event_detail_tab_speaker">Speakers</string>
    <string name="event_detail_tab_sponsor">Sponsors</string>
    <string name="event_detail_tab_exhibitor">Exhibitors</string>
    <string name="event_detail_tab_floorplan">Floor Plan</string>
    <string name="news_loading_detail">Loading article details...</string>
    <string name="error_year">Please Select Year.</string>
    <string name="error_member">Please Select Life Member.</string>
    <string name="error_title">Please Select Title.</string>
    <string name="error_image_profile">Please Upload Picture.</string>
    <string name="reg_validation">Validation...</string>
    <string-array name="marital">
        <item>Married</item>
        <item>Single</item>
        <item>Widow</item>
    </string-array>
    <string-array name="race">
        <item>Malay</item>
        <item>Chinese</item>
        <item>Indian</item>
        <item>Others</item>
    </string-array>
    <string-array name="religion">
        <item>Christianity</item>
        <item>Islam</item>
        <item>Budhism</item>
        <item>Others</item>
    </string-array>
    <string-array name="payment_method">
        <item>Cheque</item>
        <item>Cash</item>
        <item>Direct Debit</item>
        <item>Credit Card</item>
    </string-array>
    <string name="marital_0">Married</string>
    <string name="marital_1">Single</string>
    <string name="marital_2">Widow</string>
    <string name="race_0">Malay</string>
    <string name="race_1">Chinese</string>
    <string name="race_2">Indian</string>
    <string name="race_3">Others</string>
    <string name="religion_0">Christianity</string>
    <string name="religion_1">Islam</string>
    <string name="religion_2">Budhism</string>
    <string name="religion_3">Others</string>
    <string-array name="main_tabs">
        <item>About Us</item>
        <item>Coupons</item>
        <item>My Profile</item>
    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="reg_hint_bank">Bank</string>
    <string name="reg_hint_reference_cheque">Cheque Reference No</string>
    <string name="reg_hint_reference_debit">Debit Reference No</string>
    <string name="reg_hint_reference_cash">Cash Reference No</string>
    <string name="reg_hint_reference_credit">Credit Reference No</string>
    <string name="reg_hint_payment_date">Payment Date</string>
    <string name="reg_hint_expiry_date">Expiry Date</string>
</resources>