<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <info.hoang8f.android.segmented.SegmentedGroup
            android:id="@+id/profile_segment_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <RadioButton
                android:id="@+id/qr_code"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/profile_tab_qr"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/my_profile"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_tab_my_profile"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/my_events"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_tab_my_events"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/fav_events"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_tab_fav_events"
                android:textAppearance="?android:textAppearanceSmall" />

        </info.hoang8f.android.segmented.SegmentedGroup>
    </HorizontalScrollView>

</RelativeLayout>