<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <info.hoang8f.android.segmented.SegmentedGroup
            android:id="@+id/event_segment_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:weightSum="3">

            <RadioButton
                android:id="@+id/event_upcoming"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/event_tab_upcoming"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/event_archive"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/event_tab_archive"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/event_feedback"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/event_tab_feedback"
                android:textAppearance="?android:textAppearanceSmall" />

        </info.hoang8f.android.segmented.SegmentedGroup>

</RelativeLayout>