<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.od.mma.loginregistration.RegistrationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp">

        <LinearLayout
            android:id="@+id/mainlinear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edit_text_login"
                android:ems="10"
                android:hint="@string/reg_hint_fname"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp"
                android:textSize="@dimen/text_size_loginreg" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/edit_text_login"
                android:ems="10"
                android:hint="@string/reg_hint_lname"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp"
                android:textSize="@dimen/text_size_loginreg" />

            <EditText
                android:id="@+id/contact_number"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/edit_text_login"
                android:ems="10"
                android:freezesText="false"
                android:hint="@string/reg_hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="@dimen/text_size_loginreg" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/edit_text_login"
                android:ems="10"
                android:hint="@string/reg_hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="@dimen/text_size_loginreg" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/edit_text_login"
                android:ems="10"
                android:hint="@string/reg_hint_confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="@dimen/text_size_loginreg" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/reg_button_verticle"
                android:background="@drawable/reg_submit_button"
                android:text="Submit"
                android:textColor="@color/colorBlack" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
